--- a/Inteligência Artificial/BatalhaNaval/BatalhaNaval.csproj
+++ b/Inteligência Artificial/BatalhaNaval/BatalhaNaval.csproj
@@ -52,29 +52,47 @@
     <Compile Include="Entidades\InteligenciaArtificial.cs" />
     <Compile Include="Entidades\Player.cs" />
     <Compile Include="Entidades\Posicoes.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <Compile Include="TelaInicio.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TelaInicio.Designer.cs">
+      <DependentUpon>TelaInicio.cs</DependentUpon>
+    </Compile>
+    <Compile Include="TelaJogo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaJogo.Designer.cs">
+      <DependentUpon>TelaJogo.cs</DependentUpon>
     </Compile>
     <Compile Include="Helpers\Helper.cs" />
     <Compile Include="Navio.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TelaSobre.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TelaSobre.Designer.cs">
+      <DependentUpon>TelaSobre.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="TelaInicio.resx">
+      <DependentUpon>TelaInicio.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="TelaJogo.resx">
+      <DependentUpon>TelaJogo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Resources.resx</DependentUpon>
-      <DesignTime>True</DesignTime>
-    </Compile>
+    <EmbeddedResource Include="TelaSobre.resx">
+      <DependentUpon>TelaSobre.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
